@@ -8,6 +8,8 @@
       <menuitem action="Close"/>
     </menu>
     <menu action="EditMenu">
+      <menuitem action="Copy"/>
+      <separator/>
       <menuitem action="Preferences"/>
     </menu>
     <menu action="GoMenu">
